# AppDevCpp2021

./: README.md
HelloWorld/: CMakeLists.txt  main.cpp
SDL_Events/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
SDL_Events/sdl_utils/: InputEvent.cpp  InputEvent.hpp  MainWindow.cpp  MainWindow.hpp  SDLHelper.cpp  SDLHelper.hpp  SDLLoader.hpp  Texture.cpp  Texture.hpp
SDL_Events/utils/input/: EventDefines.h
SDL_Events/utils/thread/: ThreadUtils.cpp
SDL_HW_Rendering/: App.cpp  (+4 more)
SDL_Managers/manager_utils/: CMakeLists.txt
SDL_Managers/manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
SDL_Managers/manager_utils/src/managers/: DrawMgr.cpp  Mgrs.cpp  ResMgr.cpp
SDL_Scaling_Alphablending/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
SDL_Scaling_Alphablending/common/: CommonDefines.hpp
SDL_Scaling_Alphablending/config/: AppConfig.hpp  AppConfigLoader.cpp  GameConfig.hpp  ResourcesConfig.hpp
SDL_Scaling_Alphablending/game/: Game.cpp  Game.hpp
SDL_Scaling_Alphablending/sdl_utils/: MainWindow.cpp  MainWindow.hpp  Renderer.cpp  Renderer.hpp  SDLLoader.hpp  Texture.cpp  Texture.hpp
SDL_Scaling_Alphablending/sdl_utils/containers/: ImageContainer.cpp  ImageContainer.hpp
SDL_Scaling_Alphablending/utils/: NoCopy.hpp
SDL_Scaling_Alphablending/utils/drawing/: DrawParams.hpp  Rectangle.cpp  Rectangle.hpp
SDL_Scaling_Alphablending/utils/time/: Time.cpp
SDL_Text_Color_lib/utils/: CMakeLists.txt
SDL_Text_Color_lib/utils/src/drawing/: Dimention.cpp  Point.cpp
SDL_animation/: App.hpp  CMakeLists.txt  main.cpp
SDL_animation/common/: CommonDefines.hpp
SDL_animation/config/: AppConfigLoader.cpp
SDL_animation/game/: Game.cpp  Game.hpp
SDL_animation/game/entities/: Hero.cpp  Hero.hpp
SDL_animation/manager_utils/: CMakeLists.txt
SDL_animation/manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
SDL_animation/manager_utils/src/managers/: DrawMgr.cpp  ResMgr.cpp
SDL_animation/sdl_utils/inc/sdl_utils/: Renderer.hpp
SDL_animation/sdl_utils/src/: Renderer.cpp  SDLHelper.cpp  Texture.cpp  Timer.cpp
SDL_animation/utils/: CMakeLists.txt
SDL_animation/utils/cmake_helpers/: helpers.cmake
SDL_animation/utils/src/drawing/: Point.cpp
SDL_buttons_timers/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
SDL_buttons_timers/common/: CommonDefines.hpp
SDL_buttons_timers/config/: AppConfigLoader.cpp
SDL_buttons_timers/game/: Game.cpp  Game.hpp
SDL_buttons_timers/game/widgets/: Button.cpp  Button.hpp  FPS.cpp  Hero.cpp  Hero.hpp  MoveAnimation.hpp  RadioButton.cpp  RadioButton.hpp  RotateAnimation.hpp  ToggleButton.cpp  ToggleButton.hpp  Wheel.cpp  Wheel.hpp
SDL_buttons_timers/manager_utils/: CMakeLists.txt
SDL_buttons_timers/manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
SDL_buttons_timers/manager_utils/src/input/: ButtonBase.cpp  RadioContainer.cpp
SDL_buttons_timers/manager_utils/src/managers/: DrawMgr.cpp  Mgrs.cpp  ResMgr.cpp  Timer1Mgr.cpp  Timer2Mgr.cpp  TimerMgr.cpp
SDL_buttons_timers/manager_utils/src/timer/: Timer1Client.cpp  Timer2Client.cpp  TimerClient.cpp
SDL_buttons_timers/sdl_utils/: CMakeLists.txt
SDL_buttons_timers/sdl_utils/inc/sdl_utils/: InputEvent.hpp  MainWindow.hpp  Renderer.hpp  SDLHelper.hpp  Texture.hpp  Timer.hpp
SDL_buttons_timers/sdl_utils/src/: InputEvent.cpp  MainWindow.cpp  Renderer.cpp  Timer.cpp
SDL_buttons_timers/sdl_utils/src/containers/: FontContainer.cpp  ImageContainer.cpp  TextContainer.cpp
SDL_buttons_timers/utils/: CMakeLists.txt
SDL_buttons_timers/utils/inc/utils/: Destroy.hpp  RAII_Handler.hpp  Singleton.hpp
SDL_buttons_timers/utils/src/Filter/: ExpFilter.cpp
SDL_buttons_timers/utils/src/drawing/: Point.cpp  Rectangle.cpp
SDL_buttons_timers/utils/src/geometry/: Geometry.cpp
SDL_crossfire/: App.cpp  App.hpp  CMakeLists.txt  Readme
SDL_crossfire/common/: CommonDefines.hpp
SDL_crossfire/config/: AppConfig.hpp  AppConfigLoader.cpp
SDL_crossfire/game/: Game.cpp  Game.hpp  GameListener.cpp  GameListener.hpp
SDL_crossfire/game/action/: Action.cpp  Action.hpp  ActionBuffer.cpp  ActionBuffer.hpp  ActionClientIF.hpp  ActionDef.hpp  BulletAction.hpp  UnitAction.cpp  UnitAction.hpp
SDL_crossfire/game/config/: AbsCoordinates.hpp  AbsCoordinatesIntr.cpp  AbsCoordinatesIntr.hpp  ConfigData.cpp  ConfigData.hpp  GameConfig.cpp  GameConfig.hpp  GameConfigDef.hpp  Layout.cpp  Layout.hpp  RelCoordinates.hpp  RelCoordinatesIntr.cpp  RelCoordinatesIntr.hpp  Rules.cpp  Rules.hpp
SDL_crossfire/game/debug/: FPS.cpp  FPS.hpp  LevelDebug.cpp
SDL_crossfire/game/gameplay/: AmmunitionCtrl.cpp  AmmunitionCtrl.hpp  BonusCtrl.cpp  BonusCtrl.hpp  BulletsCtrl.cpp  BulletsCtrl.hpp  CD_ClientIF.hpp  CD_Through.cpp  CD_Through.hpp  CD_Touch.cpp  CD_Touch.hpp  CollisionDetect.cpp  CollisionDetect.hpp  CollitionMgr.cpp  CollitionMgr.hpp  EnemyCtrl.cpp  EnemyCtrl.hpp  LifeCounter.cpp  LifeCounter.hpp  ProcessorIF.hpp  Rules.cpp  Rules.hpp  ScoreCouters.cpp  ScoreCouters.hpp
SDL_crossfire/game/gr_layers/: Level1.cpp  Level2.cpp  Level2.hpp  LevelDebug.cpp  LevelDebug.hpp  TopLevel.cpp  TopLevel.hpp
SDL_crossfire/game/widgets/: Ammunition.cpp  Ammunition.hpp  AnimatedImage.hpp  Background.cpp  Background.hpp  BlinkingAnimation.hpp  Bonuses.cpp  Bonuses.hpp  Bullets.cpp  Bullets.hpp  EnemyContainer.cpp  EnemyContainer.hpp  ExplosionContainer.cpp  ExplosionContainer.hpp  FPS.cpp  FPS.hpp  GridPoint.cpp  GridPoint.hpp  InitHelper.cpp  InitHelper.hpp  Level1.cpp  Level1.hpp  Level2.cpp  Level2.hpp  MoveAnimation.hpp  RotateAnimation.hpp  ScaleTexture.cpp  ScaleTexture.hpp  Ship.cpp  Ship.hpp  SpriteAnimation.hpp  TopLevel.cpp  TopLevel.hpp  WidgetContainer.cpp  WidgetContainer.hpp  WidgetTO.hpp
SDL_crossfire/gr_engine/: CMakeLists.txt
SDL_crossfire/gr_engine/cmake_helpers/: helpers.cmake
SDL_crossfire/gr_engine/src/config/: DebugCfg.cpp
SDL_crossfire/manager_utils/: CMakeLists.txt
SDL_crossfire/sdl_utils/: CMakeLists.txt
SDL_crossfire/sdl_utils/src/: MainWindow.cpp  Renderer.cpp  Texture.cpp  Timer.cpp
SDL_crossfire/utils/: CMakeLists.txt
SDL_crossfire/utils/src/: RandomNumber.cpp
(+289 files in other folders)
